Added the admin REST API
